# turtlecoin-crypto

./: .eslintrc.yml  .gitignore  .gitmodules  CMakeLists.txt  CREDITS  LICENSE  README.md  index.d.ts  package-lock.json  package.json  tsconfig.json  typedoc.json
.github/workflows/: ci.yml
docs/: index.html  modules.html
docs/assets/js/: search.js
docs/classes/: crypto.html  default.html
docs/enums/: librarytype.html
docs/interfaces/: crypto_arcturus_signature_t.html  crypto_borromean_signature_t.html  crypto_bulletproof_plus_t.html  crypto_bulletproof_t.html  crypto_clsag_signature_t.html  crypto_triptych_signature_t.html  iconfig.html
examples/csharp/: TurtleCoinCryptoWrapper.cs
include/: StringTools.h  audit.h  base58.h  benchmark.h  bulletproofs.h  bulletproofsplus.h  chacha8.h  cn_base58.h  crypto.h  crypto_common.h  crypto_types.h  crypto_vector_types.h  gray_code_generator.h  hash-ops.h  hash.h  hashing.h  json_helper.h  memory_helper.h  mnemonics.h  multisig.h  random.h  ring_signature_arcturus.h  ring_signature_borromean.h  ring_signature_clsag.h  ring_signature_triptych.h  ringct.h  scalar_transcript.h  serializer.h  signature.h  slow-hash-common.h  string_tools.h  turtlecoin-crypto.h  variant2_int_sqrt.h  variant4_random_math.h
scripts/: build_js.sh  format.js
src/: StringTools.cpp  audit.cpp  base58.cpp  bulletproofs.cpp  bulletproofsplus.cpp  cn_base58.cpp  crypto.cpp  crypto_common.cpp  cryptotest.cpp  hashing.cpp  javascript_module.cpp  memory_helper.cpp  mnemonics.cpp  multisig.cpp  nodejs_module.cpp  random.cpp  ring_signature_arcturus.cpp  ring_signature_borromean.cpp  ring_signature_clsag.cpp  ring_signature_triptych.cpp  ringct.cpp  signature.cpp  slow-hash-arm.c  slow-hash-portable.c  slow-hash-x86.c  string_tools.cpp  tree-hash.c  turtlecoin-crypto-js.cpp  turtlecoin-crypto-node.cpp  turtlecoin-crypto.cpp
test/: test.ts
tests/: crypto.ts
typescript/: index.ts  types.ts
